# HamsterMusic

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  bunfig.toml  decode_source.js  index.html  package.json  tailwind.config.js  tauri.conf.json  test_source.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
icons/: icon.icns
src/: App.svelte  app.css  main.ts  types.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src/components/: MainContent.svelte  MusicLibrary.svelte  PlayerBar.svelte  Settings.svelte  Sidebar.svelte
src/stores/: music-source.ts  player.ts  settings.ts
src/utils/: flower-source.ts  music.ts  source-parser.ts  tray.ts
