[package]
name = "zensound"
version = "0.1.0"
description = "蝉音 - 支持在线和本地听音乐的应用"
authors = ["ZenSound Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# 优化发布构建体积
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
